[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/CombatScreenControl.gd" type="Script" id=1]
[ext_resource path="res://assets/combat_4k.jpg" type="Texture" id=2]
[ext_resource path="res://DraggableTextureRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gameshowspot.png" type="Texture" id=4]
[ext_resource path="res://assets/garfield_overworld.png" type="Texture" id=5]


[node name="CombatScreenControl" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1920.0
margin_top = -1080.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 3840, 2160 )
rect_pivot_offset = Vector2( 1920, 1080 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="EnemyPos" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Enemy" parent="EnemyPos" instance=ExtResource( 3 )]

[node name="Overworld" type="TextureRect" parent="."]
margin_left = 1241.48
margin_top = 1214.04
margin_right = 1617.48
margin_bottom = 1454.04
texture = ExtResource( 4 )

[node name="EnemyOverworld" parent="Overworld" instance=ExtResource( 3 )]
margin_left = 41.1543
margin_top = -96.0259
margin_right = 327.154
margin_bottom = 166.974
texture = ExtResource( 5 )
[connection signal="position_changed" from="EnemyPos/Enemy" to="." method="_on_Enemy_position_changed"]
[connection signal="position_changed" from="Overworld/EnemyOverworld" to="." method="_on_EnemyOverworld_position_changed"]
